<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLighter"
    tools:context=".ui.searchmatch.SearchMatchActivity">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchMatch"
        style="@style/AppSearchView"
        android:background="@drawable/bg_search_view_corners"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="@string/search_match_hint" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearchMatch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/small_spacing"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/searchMatch"
        app:layout_constraintStart_toStartOf="@id/searchMatch"
        app:layout_constraintTop_toBottomOf="@id/searchMatch"
        tools:listitem="@layout/item_match" />

    <ProgressBar
        android:id="@+id/progressBarSearchMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_spacing"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchMatch" />

    <ImageView
        android:id="@+id/imgNoMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/no_match_desription"
        app:layout_constraintBottom_toTopOf="@+id/txtNoMatch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchMatch"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_no_match" />

    <TextView
        android:id="@+id/txtNoMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_spacing"
        android:text="@string/no_match"
        android:textAlignment="center"
        android:textColor="@color/whiteDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgNoMatch" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupNoMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="imgNoMatch,txtNoMatch" />

</androidx.constraintlayout.widget.ConstraintLayout>